--- a/.env
+++ b/.env
@@ -6,14 +6,17 @@ DB_PASSWORD=test
 DB_HOST=mysql
 DB_DSN=mysql:host=${DB_HOST};dbname=${DB_NAME}
 
-EMAIL_CHECK_THREADS=4
+EMAIL_CHECK_THREADS=8
 EMAIL_CHECK_BATCH=1
-EMAIL_CHECK_MEMORY=4mb
+EMAIL_CHECK_MEMORY=6M
+EMAIL_CHECK_DELAY=30
 
 EMAIL_SEND_DELAY=300
 EMAIL_SEND_BATCH=40
 EMAIL_SEND_MEMORY_LIMIT=4mb
-EMAIL_SEND_PERIOD=7
+EMAIL_SEND_PERIOD_DAYS=3
 EMAIL_SEND_THREADS=4
 
 FIXTURES_CHECK_EMAIL=0
+
+VERBOSE=1
